# zero-knowledge-CNN

./: Cargo.toml  ConVolution.ipynb  Prover.py  README.md  conv_relu.py  convolution.py  extension.py  hadmard_product.py  interactive_proof.py  ntt_init.py  ntt_run.py  ntt_test.ipynb  parameters.py  sumcheck.py  value_prediction_ext.py  wire_prediction_ext.py
Circuit/: circuit.py  interactive_proof.py  value_prediction_ext.py  wire_prediction_ext.py
circuit/: circuit.py
else/: NTT_init.ipynb  SumCheck.ipynb  conv_relu.py  draw.py  quant.py
else/data/: info.json  input_data.json  output_data.json  output_data_ref.json
else/performance/: benchmark_128_5.json  benchmark_256_11.json  benchmark_256_3.json  benchmark_256_5.json  benchmark_256_7.json  benchmark_32_5.json  benchmark_64_5.json
src/: lib.rs
src/conv_relu/: data_structure.rs  mod.rs  prover.rs  setup.rs  test.rs  verifier.rs
src/convolution/: mod.rs  prover.rs  test.rs  verifier.rs
src/convolution/fft/: mod.rs
src/convolution/gkr/: mod.rs
src/ml_lookup/: data_structures.rs  mod.rs  test.rs
src/ml_lookup/protocol/: mod.rs  prover.rs  verifier.rs
test_data/: test_data.py
utilities/: calculation.py  gadget.py  ntt_init.py  parameters.py  sumcheck.py
