[package]
name = "lookup_relu"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-std = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
hashbrown = { version = "0.14.0" }
blake2 = { version = "0.10", default-features = false }
rayon = { version = "1", optional = true }
ark-sumcheck = { git = "https://github.com/arkworks-rs/sumcheck", branch = "master" }

[dev-dependencies]
ark-test-curves = { version = "0.4.0", default-features = false, features = ["bls12_381_scalar_field", "bls12_381_curve"] }

[features]
default = []
honest_prover = []



[patch.crates-io]
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
